--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://quandaaaa.github.io/quanda.github.io/"
+baseURL = "https://quanda.github.io/"
 
 # Change the default theme to be use when building the site with Hugo
 theme = "LoveIt"
